# NetPal

./: .gitignore  AGENTS.md  CONTRIBUTION.md  LICENSE  README.md  app.py  install.sh  install_tools.sh  oneline.sh  pyproject.toml  requirements.txt  run.sh  setup.sh  uninstall.sh
.streamlit/: config.toml
config/: ai_settings.yaml  scan_types.yaml  sync_settings.yaml  tool_suggestions.yaml
data/: states.json
examples/: claude_desktop_config.json  example-projects.json  example_project.json  example_project_findings.json
models/: __init__.py  finding.py  host.py  network.py  project.py  service.py
netpal/: __init__.py  __main__.py  cli.py  mcp_context.py  mcp_server.py  tui.py
netpal/config/: __init__.py  ai_prompts.json  config.json  config.json.example  creds.json.example  exploit_tools.json  recon_types.json
netpal/mcp_resources/: __init__.py  config_resources.py  host_resources.py  project_resources.py
netpal/mcp_tools/: __init__.py  ad_tools.py  ai_tools.py  asset_tools.py  cloud_tools.py  config_tools.py  finding_tools.py  project_tools.py  scan_tools.py  testcase_tools.py
netpal/models/: __init__.py  asset.py  finding.py  host.py  project.py  service.py  test_case.py  test_case_registry.py
netpal/modes/: __init__.py  ad_scan_handler.py  ai_enhance_handler.py  ai_review_handler.py  asset_create_handler.py  auto_handler.py  base_handler.py  delete_handler.py  export_handler.py  findings_cli_handler.py  hosts_handler.py  init_handler.py  list_handler.py  project_edit_handler.py  pull_handler.py  push_handler.py  recon_cli_handler.py  recon_tools_handler.py  set_handler.py  setup_handler.py  testcase_handler.py
netpal/services/: __init__.py  ai_analyzer.py  aws_sync.py  nmap_scanner.py  notification_service.py  tool_runner.py  xml_parser.py
netpal/services/ad/: __init__.py  acl_parser.py  collector.py  formatters.py  kerberos.py  ldap_client.py  transformers.py
netpal/services/ai/: __init__.py  analyzer.py  base_provider.py  context_builder.py  finding_enhancer.py  provider_factory.py
netpal/services/ai/providers/: __init__.py  anthropic_provider.py  azure_provider.py  bedrock_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
netpal/services/aws/: __init__.py  operations.py  registry.py  sync_engine.py
netpal/services/nmap/: __init__.py  command_builder.py  scanner.py
netpal/services/testcase/: __init__.py  csv_loader.py  manager.py
netpal/services/tools/: __init__.py  base.py  command_tool_runner.py  http_tool_runner.py  httpx_runner.py  nmap_script_runner.py  nuclei_runner.py  playwright_runner.py  tool_orchestrator.py
netpal/textual_ui/: __init__.py  app.py  components.py  helpers.py  styles.tcss  theme.py
netpal/utils/: __init__.py  ai_helpers.py  ai_validation.py  asset_factory.py  asset_utils.py  config_loader.py  display_utils.py  file_utils.py  finding_factory.py  finding_viewer.py  image_loader.py  logger.py  naming_utils.py  network_context.py  network_utils.py  operator_actions.py  project_selection.py  project_utils.py  pull_utils.py  recon_executor.py  recon_menu.py  scan_helpers.py  setup_wizard.py  tool_paths.py  validation.py
netpal/utils/aws/: __init__.py  aws_utils.py  pull_utils.py
netpal/utils/display/: __init__.py  display_utils.py  finding_viewer.py  next_command.py
netpal/utils/persistence/: __init__.py  file_utils.py  local_cleanup.py  project_paths.py  project_persistence.py  project_utils.py
netpal/utils/scanning/: __init__.py  recon_executor.py  scan_helpers.py
netpalui/: __init__.py  app.py
netpalui/static/: style.css
netpalui/templates/: ad.html  ai.html  assets.html  base.html  credentials.html  findings.html  hosts.html  index.html  job_panel.html  project.html  projects.html  recon.html  settings.html  testcases.html  tools.html
services/: __init__.py  nuclei_scanner.py  scanner.py  tool_automation.py
tests/: test_config_loader.py  test_local_only_parity.py  test_network_context.py  test_tool_command_templates.py  test_tui_smoke.py  test_tui_views.py  test_web_ui.py
ui/: __init__.py  ai_settings_view.py  chatbot_view.py  findings_view.py  host_view.py  network_view.py  project_view.py  service_view.py  settings_view.py
ui/components/: __init__.py  ai_config_components.py
utils/: __init__.py  aws_sync_service.py  aws_utils.py  command_utils.py  config_loader.py  constants.py  credential_storage.py  dialog_helpers.py  dialog_manager.py  findings_storage.py  host_list_utils.py  json_storage.py  message_formatter.py  model_management.py  network_utils.py  path_utils.py  port_services.py  project_sync_utils.py  scan_validation.py  screenshot_utils.py  state_manager.py  tool_output.py  xml_parser.py
