[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netpal"
version = "1.0.0"
description = "NetPal - Automated Network Penetration Testing CLI Tool"
authors = [{name = "Gustavo Bobbio-Hertog", email = "defender-gb@protonmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["penetration testing", "network security", "nmap", "nuclei"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "psutil>=7.2.2",
    "colorama>=0.4.6",
    "boto3>=1.42.39",
    "xmltodict>=1.0.2",
    "pyyaml>=6.0",
    "google-genai==1.61.0",
    "anthropic>=0.77.0",
    "openai>=2.16.0",
    "ollama>=0.6.1",
    "requests>=2.32.5"
]

[project.urls]
Homepage = "https://github.com/DefenderGB/NetPal"
Documentation = "https://github.com/DefenderGB/NetPal/docs"
Repository = "https://github.com/DefenderGB/NetPal"
Issues = "https://github.com/DefenderGB/NetPal/issues"

[project.scripts]
netpal = "netpal.cli:main"

[tool.setuptools]
packages = ["netpal", "netpal.models", "netpal.services", "netpal.utils", "netpal.config"]
include-package-data = true

[tool.setuptools.package-data]
netpal = ["config/*.json", "config/*.yaml"]