[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netpal"
version = "1.2.0"
description = "NetPal - Automated Network Penetration Testing CLI Tool"
authors = [{name = "Gustavo Bobbio-Hertog", email = "defender-gb@protonmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["penetration testing", "network security", "nmap", "nuclei"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "psutil>=7.2.2",
    "colorama>=0.4.6",
    "xmltodict==0.15.0",
    "requests>=2.32.5",
    "playwright>=1.52.0",
    "textual>=2.1.0",
    "textual-serve>=1.1.1",
    "boto3>=1.33.13",
    "anthropic>=0.77.0",
    "openai>=2.16.0",
    "google-genai>=1.61.0",
    "ollama>=0.6.1",
    "mcp[cli]>=1.0.0",
    "flask>=3.1.3",
]

[project.urls]
Homepage = "https://github.com/DefenderGB/NetPal"
Repository = "https://github.com/DefenderGB/NetPal"

[project.scripts]
netpal = "netpal.cli:main"
netpal-mcp = "netpal.mcp_server:main"
netpalui = "netpalui.app:main"

[tool.setuptools]
packages = [
    "netpal",
    "netpal.models",
    "netpal.modes",
    "netpal.services",
    "netpal.services.ai",
    "netpal.services.ai.providers",
    "netpal.services.aws",
    "netpal.services.nmap",
    "netpal.services.tools",
    "netpal.utils",
    "netpal.utils.aws",
    "netpal.utils.display",
    "netpal.utils.persistence",
    "netpal.utils.scanning",
    "netpal.config",
    "netpal.mcp_tools",
    "netpal.mcp_resources",
    "netpalui",
]
include-package-data = true

[tool.setuptools.package-data]
netpal = ["config/*.json", "config/*.yaml"]
netpalui = ["templates/*.html", "static/*.css"]
